--- a/Hello_world.html
+++ b/Hello_world.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
       <head>
-<title>Sample</title>
+<title>Intro to Web_dev</title>
       </head>
 <body>
 Hello, world!!!
